# invest_value_manager

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
agents/: _tool_runner.py  a11_quant_screener.py  a12_special_sits_screener.py  a21_financial_analyst.py  a22_special_sit_modeler.py  a23_business_analyst.py  a24_risk_analyst.py  a25_web_researcher.py  a31_decision_maker.py  a32_portfolio_monitor.py
archive/: completed_tasks_2026.yaml  index.yaml  investment_history.md
config/: memory_management.yaml  rules.yaml
dashboard/: DEPLOY.md  README.md  __init__.py  app.py  components.py  data_loader.py  requirements.txt  sidebar.py
data/: opportunity_scan_filtered.csv  screening_eu_opportunity.csv  screening_uk_opportunity.csv  screening_us_opportunity.csv  us_midcaps.csv
docs/: ARCHITECTURE.md  AUDIT_AMODEI_QUESTIONS.md  MIGRATION.md  analisis_joan_nvda_tsmc_tierras_raras.md  audit_context_weight.md  auditoria_joan_nahuel_2026-02-03.md  command_center.html  complex_systems_analysis.md  contrathesis_simulation_mony.md  contrathesis_simulation_nvda.md  covid_system_crash_audit.md  covid_system_crash_audit_improvements.md  crisis_resilience_framework.md  evolution_framework_4.0.md  evolution_framework_4.0_v1_parameters.md  evolution_framework_4.0_v2_principles.md  evolution_framework_4.0_v3_consistency.md  evolution_proposal_fw_v3.0.md  framework_v3.0_final_design.md  implementation_plan_complete.md  ownership_graph.html  ownership_graph_design.md  refactoring_proposal.md  risk_heatmap.html  scalability_policy.md  (+6 more)
(+1205 files in other folders)
