[project]
name = "valuehunter"
version = "1.0.0-alpha"
description = "Multi-agent investment analysis system"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "pydantic>=2.6.0",
    "jsonschema>=4.21.0",
    "pyyaml>=6.0.0",
    "yfinance>=0.2.36",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
dashboard = [
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
]
scheduler = [
    "apscheduler>=3.10.0",
]

[tool.setuptools.packages.find]
include = ["orchestrator*", "agents*", "scrapers*", "knowledge_base*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
